package dev.punitd

object Tags {
    const val ScreenLoader = "screen_loader"
    const val ImagesList = "images_list"
    const val PaginationLoader = "pagination_loader"
    const val SearchSuggestionsLoader = "search_suggestions_loader"

    const val PhotosTab = "photos_tab"
    const val SearchTab = "search_tab"
}